Fix extra padding on bottom of header

--- a/sass/site/_main.scss
+++ b/sass/site/_main.scss
@@ -8,7 +8,7 @@ h1 {
 	line-height: 1;
 	margin-top: 1rem;
 	padding-right: 2.5rem;
-	padding-bottom: 4rem;
+	padding-bottom: 2rem;
 
 	& + * {
 		clear: right; // Prevent elements actually floating
@@ -35,7 +35,7 @@ h1 {
 		;
 		background-size: 4rem, 100%;
 		background-repeat: no-repeat;
-		background-position: 100% calc(50% - 4rem);
+		background-position: 100% calc(50% - 2rem);
 
 		@media (min-width: $mq-site-narrow) {
 			right: -2rem;
